force-app/main/default/objects/Payment_Record__c/fields/Case_No__c.field-meta.xml
<CustomField>
    <fullName>Case_No__c</fullName>
    <label>Case No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>