force-app/main/default/objects/Payment_Record__c/fields/Cash_Balance_on_Case__c.field-meta.xml
<CustomField>
    <fullName>Cash_Balance_on_Case__c</fullName>
    <formula>Payee__r.Case_Management__r.Cash_Balance_on_Case__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cash Balance on Case</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>