force-app/main/default/objects/Payment_Record__c/fields/Check__c.field-meta.xml
<CustomField>
    <fullName>Check__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Check</label>
    <referenceTo>Check__c</referenceTo>
    <relationshipLabel>Payment Records</relationshipLabel>
    <relationshipName>Payment_Records</relationshipName>
    <type>Lookup</type>
</CustomField>