force-app/main/default/objects/Payment_Record__c/fields/Check_Issued__c.field-meta.xml
<CustomField>
    <fullName>Check_Issued__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for rollup summary on payees then to case. Populated by flow that when a check is associated with the payment and when the status of the check changes.</description>
    <label>Check Issued</label>
    <type>Checkbox</type>
</CustomField>