force-app/main/default/objects/Payment_Record__c/fields/DIR_Office__c.field-meta.xml
<CustomField>
    <fullName>DIR_Office__c</fullName>
    <formula>Payee__r.DIR_Office__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DIR Office</label>
    <type>Text</type>
</CustomField>