force-app/main/default/objects/Payment_Record__c/fields/Judgment_Payment__c.field-meta.xml
<CustomField>
    <fullName>Judgment_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Judgment Payment</label>
    <referenceTo>Judgment_Payment__c</referenceTo>
    <relationshipLabel>Payment Records</relationshipLabel>
    <relationshipName>Payment_Records</relationshipName>
    <type>Lookup</type>
</CustomField>