force-app/main/default/objects/Payment_Record__c/fields/Payee_Name__c.field-meta.xml
<CustomField>
    <fullName>Payee_Name__c</fullName>
    <formula>Payee__r.Payee_Name__c</formula>
    <label>Payee Name</label>
    <type>Text</type>
</CustomField>