force-app/main/default/objects/Payment_Record__c/fields/Payment_applies_to__c.field-meta.xml
<CustomField>
    <fullName>Payment_applies_to__c</fullName>
    <description>Displays where the payment has been applied on the violations</description>
    <formula>IF(!ISBLANK(Liability_Payment__c) , TEXT(Liability_Payment__r.Payment_Applied_To__c),
   IF(!ISBLANK(Judgment_Payment__c), TEXT( Judgment_Payment__r.Apply_Payment_To__c), &#39;Other&#39;))</formula>
    <label>Payment applies to</label>
    <type>Text</type>
</CustomField>