force-app/main/default/objects/Payment_Record__c/fields/Payor__c.field-meta.xml
<CustomField>
    <fullName>Payor__c</fullName>
    <formula>IF(ISBLANK(Liability_Payment__c),
   Judgment_Payment__r.Case_Payment__r.Receipt__r.Payor__c,
   Liability_Payment__r.Case_Payment__r.Receipt__r.Payor__c)</formula>
    <label>Payor</label>
    <type>Text</type>
</CustomField>