force-app/main/default/objects/Payment_Record__c/fields/Receipt_Hold_Date__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Hold_Date__c</fullName>
    <formula>IF(Liability_Payment__c = NULL,
   Judgment_Payment__r.Case_Payment__r.Receipt__r.Hold_Date__c,
   Liability_Payment__r.Case_Payment__r.Receipt__r.Hold_Date__c)</formula>
    <label>Receipt Hold Date</label>
    <type>Date</type>
</CustomField>