force-app/main/default/objects/Payment_Record__c/fields/UWF_Payee_Office__c.field-meta.xml
<CustomField>
    <fullName>UWF_Payee_Office__c</fullName>
    <formula>IF(CONTAINS(Payee__r.DIR_Office__c, &#39;BOFE&#39;), &#39;Statewide BOFE&#39;, Payee__r.DIR_Office__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UWF Payee Office</label>
    <type>Text</type>
</CustomField>