force-app/main/default/objects/Payment_Record__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Payee__c</columns>
    <columns>Payee_Name__c</columns>
    <columns>Check__c</columns>
    <columns>Check_Issued__c</columns>
    <columns>Payment_Amount__c</columns>
    <columns>Liability_Payment__c</columns>
    <columns>Payment_applies_to__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>